--- a/web.config
+++ b/web.config
@@ -9,7 +9,11 @@
 <configuration>
   <system.webServer>
     <!-- Visit http://blogs.msdn.com/b/windowsazure/archive/2013/11/14/introduction-to-websockets-on-windows-azure-web-sites.aspx for more information on WebSocket support -->
-    
+    <staticContent>
+        <mimeMap fileExtension=".mp4" mimeType="video/mp4"/>
+        <mimeMap fileExtension=".ogv" mimeType="video/ogg"/>
+        <mimeMap fileExtension=".webm" mimeType="video/webm"/>
+    </staticContent>
     <webSocket enabled="false" />
     <handlers>
       <!-- Indicates that the server.js file is a node.js site to be handled by the iisnode module -->
